I fixed the problem of first use of language (to make the default language) in a special java file I also updated the contact button of (place - person) pages Non the translate work perfectly with all items ( static and bdd )

--- a/app/src/main/res/layout/place_activity.xml
+++ b/app/src/main/res/layout/place_activity.xml
@@ -118,6 +118,7 @@
         android:backgroundTint="@android:color/transparent"
         android:defaultFocusHighlightEnabled="true"
         android:focusedByDefault="false"
+        android:onClick="EmailClique"
         android:src="@drawable/email"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -131,6 +132,7 @@
         android:backgroundTint="@android:color/transparent"
         android:defaultFocusHighlightEnabled="true"
         android:focusedByDefault="false"
+        android:onClick="PhoneClique"
         android:src="@drawable/phone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -158,6 +160,7 @@
         android:backgroundTint="@android:color/transparent"
         android:defaultFocusHighlightEnabled="true"
         android:focusedByDefault="false"
+        android:onClick="FaxClique"
         android:src="@drawable/fax"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
