I added search when you click on Enter button in mainactivity ( for now you have to click 2 times for search) I made all mainactivity java code clear by adding comments for each part of the work

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:fitsSystemWindows="true"
     tools:context=".MainActivity"
     tools:openDrawer="start"
+    android:imeOptions="actionDone"
     >
 
 
